css/style.css
/* Boiler plate Start */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  width: 100%;
}

/* Boiler plate End */

@font-face {
  font-family: "canopee";
  src: url(../Media/font/canopee.ttf);
}
@font-face {
  font-family: "domain";
  src: url(../Media/font/domain.ttf);
}
/* Page 1 Start  */

.main{
  background-color: #1C1C1A;
  overflow-x: hidden;
}
.page1 {
  height: 100%;
  width: 100%;
  padding: 2vw 2vw;
  background-color: #c4bcb3;
  position: relative;
}

.nav {
  height: 5vw;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2vw 2vw;
  border-bottom: 0.1vw solid #575757;
}

.nav img {
  width: 15vw;
  height: auto;
}

.nav h5 {
  font-size: 1.5vw;
  color: #000;
  font-weight: 600;
}

.nav i {
  font-size: 2vw;
  color: #000000;
}

.elems {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 4vw 0vw;
  /* background-color: rgb(105, 99, 99); */
  width: 100%;
  height: 30vw;
}

.elems .elem1 {
  width: 30%;
  height: 100%;
  display: flex;
  flex-direction: column;
  gap: 1vw;
}

.elem1 .image-div {
  width: 100%;
  height: 75%;
  overflow: hidden;
}

.elem1 .image-div img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: all 0.5s ease-in-out;
}

.image-div:hover img {
  transform: scale(1.1);
  transition: all 0.5s ease-in-out;
}

.elems .elem1 h4 {
  font-size: 2vw;
  color: #000000;
  font-weight: 600;
}

.elems .elem1 h4 span {
  font-size: 1.5vw;
  font-weight: 400;
  background-color: #ba3d12;
  color: #ffffff;
  padding: 0.2vw 0.5vw;
  border-radius: 0.5vw;
}

.elems .elem1 p {
  font-size: 1vw;
  color: #000000;
  font-weight: 600;
}

.elem2 {
  width: 30%;
  height: 100%;
  padding: 0vw 5vw;
  border-right: 0.1vw solid #575757;
  border-left: 0.1vw solid #575757;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1.5vw;
}

.elem2 h2 {
  font-family: canopee;
  font-size: 4vw;
  color: #141313;
  font-weight: 500;
  text-align: center;
}
.elem2 h3 {
  font-family: domain;
  font-size: 2.5vw;
  color: #5e5e5e;
  font-weight: 500;
  text-align: center;
}
.elem2 h6 {
  font-size: 1.2vw;
  color: #222222;
  font-weight: 600;
  text-align: center;
}

.page1 h1 {
  font-family: canopee;
  font-size: 32vw;
  color: #C3BBB2;
  background-color: #1C1C1A;
  font-weight: 500;
  text-align: center;
  /* width: 90%; */


}

